Added limited cases

--- a/@pages/cases-list.html
+++ b/@pages/cases-list.html
@@ -10,11 +10,18 @@
 </head>
 <body>
     <h1 id="info-text">Win | Lose in %</h1>
+    <div id="wrapper">
     <section id="all-hits">
         <div class="all-hits-container">
-            <h1>List of CSGO boxes</h1>
+            <h1>List of CSGO Cases</h1>
         </div>
     </section>
+    <section id="limited-hits">
+        <div class="limited-container">
+            <h1>Limited CSGO Cases</h1>
+        </div>
+    </section>
+</div>
 </body>
 <img id="github-img" src="../github.png" />
 </html>
