--- a/@pages/cases-list.html
+++ b/@pages/cases-list.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cases-list.css" />
+    <link rel="icon" href="../icon.png">
     <script src="./script.js"></script>
-    <title>List of Cases</title>
+    <title>Odds of profit - Roy</title>
 </head>
 <body>
     <h1 id="info-text">Win | Lose in %</h1>
